ISPN-14102 JVM GC Logs never set on the server